fix z-index.

--- a/components/activity-indicator/style/index.less
+++ b/components/activity-indicator/style/index.less
@@ -13,6 +13,7 @@
 .@{activityIndicatorPrefixCls} {
   display: flex;
   align-items: center;
+  z-index: 999;
   &-spinner {
     display: inline-block;
     margin-right: 2 * @grid;
